# ncmdump-mac

./: .clang-format  .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CMakeLists.txt  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx  strings.test.ts  strings.ts
scripts/: fix-macos-bundle.mjs  generate-app-icon.mjs  generate-icon-options.mjs  package-dmg.mjs  prepare-sidecar.mjs  release.mjs
src/: main.cpp  ncmcrypt.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/include/: ncmcrypt.h
src/lib/: libncmdump.cpp  libncmdump.h
test/: CMakeLists.txt  ncmcrypt_test.cpp  test.flac
