[package]
name = "ncmdump-mac"
version = "1.0.0"
description = "A macOS desktop wrapper for ncmdump"
authors = ["ncmdump contributors"]
edition = "2021"

[lib]
name = "ncmdump_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "process"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
futures = "0.3"
once_cell = "1"
strip-ansi-escapes = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
objc2 = "0.5"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor", "NSVisualEffectView"] }
